assets/style.css
/* ... */
/* Nav */
nav {
    background-color: #379683;
}

#logo {
    font-family: 'Lusitana', sans-serif;
    font-weight: 700;
    font-style: italic;
    font-size: 5vw;
    text-align: center;
    padding-right: 0;
    padding-left: 0;
    color: #fafafa !important;
    text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
}

.list {
    display: inline;
    margin-left: 27vw;
    font-size: 2.4vw;
    padding-right: 0.5vw;
    text-align: center;

}

.list a {
    color: #fafafa !important;
    text-decoration: none;
    margin-left: 2%;
    margin-right: 8%;
    font-family: 'Lusitana', serif;
    text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
}

.list a:hover {
    color: black !important;
    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
}

#nav {
    padding-bottom: 20px;
}

/*Playing Card Divs */

.cards {
    cursor: pointer;
    transform-style: preserve-3d;
    transform-origin: center right;
    transform-style: preserve-3d;
    transform-origin: center right;
    transition: transform 1s;

}

.card-is-flipped {
    transform: rotateY(-180deg) translateX(-100%);

}

.card-is-flipped-start {
    transform: rotateY(180deg) translateX(100%);

}

.card-face--back {
    transform: rotateY(-180deg) translateX(100%);
    transition: transform 0.5s;

    background-image: url(images/playing-card-rear.png) !important;
}

.card-face--back-start {
    transform: rotateY(180deg) translateX(100%);
    transition: transform 0.5s;

    background-image: url(images/playing-card-rear.png) !important;
}


.card.visible .card-back {
    transform: rotateY(-180deg);
}
.card-is-not-flipped{
    
}

#hearts {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    padding-bottom: 5px;
}

#hearts div {
    width: 7.5vw;
}

#spades {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding-bottom: 5px;
}

#spades div {
    width: 7.5vw;
}

#diamonds {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding-bottom: 5px;
}

#diamonds div {
    width: 7.5vw;
}

#clubs {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding-bottom: 5px;
}

#clubs div {
    width: 7.5vw;
}

#Card-AH {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-AH.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-2H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-2H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-3H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-3H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-4H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-4H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-5H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-5H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-6H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-6H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-7H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-7H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-8H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-8H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-9H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-9H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-10H {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-10H.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-JH {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-JH.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-QH {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-QH.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-KH {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-KH.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-AS {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-AS.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-2S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-2S.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-3S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-3S.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-4S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-4S.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-5S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-5S.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-6S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-6S.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-7S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-7S.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-8S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-8S.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-9S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-9S.png);
    background-size: contain;
    background-repeat: no-repeat;
}

#Card-10S {
    height: 16vh;
    width: 7vw;
    background-image: url(images/Card-10S.png);
    background-size: contain;
    background-repeat: no-repeat;
}
/* ... */

